# conet

./: .gitignore  CLAIM_V3.md  DEMO.md  FRONTEND_REBUILD.md  HANDOFF_CLAUDE_TO_CLAUDE.md  IPHONE_HANDOVER_TO_GEMINI.md  MICROAGENT_DESIGN.md  PLAN_DEVICES.md  README.md  docker-compose.override.yml  docker-compose.yml  login.js  stress-tv-ramp.mjs
backend/: .bootstrap.json  .dockerignore  Dockerfile  FLY_DEPLOYMENT.md  README.md  _host_arp.txt  _native_launcher.py  alembic.ini  append_manifesto.js  append_tos.js  append_ux.js  fix_encoding.js  fix_encoding.py  fly.toml  pyproject.toml  test_ssdp.js  test_ssdp.py  tv_keys.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_lan_claims.py  0003_billing_and_shell.py  0004_two_kind_api_keys.py  0005_device_ownership.py
backend/app/: config.py  exceptions.py  logging_setup.py  main.py
backend/app/auth/: __init__.py  dependencies.py  device_tokens.py  enterprise_scopes.py  jwt.py  passwords.py
backend/app/billing/: payouts.py  stripe_adapter.py
backend/app/crypto/: attestation.py  chunker.py  hash_workloads.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/networking/: protocol.py  websocket.py
backend/app/observability/: metrics.py  middleware.py
backend/app/schemas/: cluster.py  compute.py  device.py  device_ownership.py  enterprise.py  job.py  lan_claim.py  marketplace.py  payout.py  user.py
backend/app/services/: aggressive_mode.py  android_pairing.py  benchmark.py  bundling.py  claim_service.py  device_ownership.py  (+23 more)
backend/docs/: ANDROID_PAIRING_GUIDE_KO.md
backend/scripts/: _agg_payload.json  _phone_simulate.py  _scan_parse.py  _sniff_tv_dns.py  _ssap_background.py  _ssap_launch.py  _ssap_url_variants.py  _ssap_wake.py  _test_detect.py  _test_send.py  _unicast_arp.py  arp_diag.py  arp_storm.py  bootstrap.py  dns_dst_diag.py  fly-entrypoint.sh  force_pop.py  host_full_mitm.py  host_hijack.py  http_diag.py  iphone_trace.py  portal_runner.py  sniff_diag.py
backend/tests/: conftest.py  test_attestation.py  test_benchmark.py  test_chunker.py  test_device_ownership.py  test_isolation.py  test_money.py  test_pricing.py
sdks/conet-python/: README.md  pyproject.toml
(+214 files in other folders)
