[project]
name = "electromesh-backend"
version = "0.1.0"
description = "ElectroMesh: distributed compute mesh leasing 10% of consumer electronics"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "celery>=5.3",
    "httpx>=0.27",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "orjson>=3.10",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "tenacity>=8.2",
    "stripe>=9.0",
    "cryptography>=42.0",
    "websockets>=12.0",
    "anyio>=4.3",
    "pyjwt>=2.8",
    "ulid-py>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "freezegun>=1.4",
    "respx>=0.21",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004", "PLR0911", "PLR0912", "PLR0915"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
